syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "BookServiceProto";

message Book {
  int64 id = 1;
  string title = 2;
  string author = 3;
}

message BookRequest {
  int64 id = 1;
  string title = 2;
  string author = 3;
}

message BookStreamRequest {
  int32 offset = 1;
}

message Empty {
}

service BookService {
  rpc AddBook(BookRequest) returns (Empty);
  rpc StreamBooks(BookStreamRequest) returns (stream Book);
}